tests/requests/invalid/009.py
from gunicorn.ghttp.errors import LimitRequestHeaders
request = LimitRequestHeaders
